--- a/configs/catalogue.service
+++ b/configs/catalogue.service
@@ -4,7 +4,7 @@ Description = Catalogue Service
 [Service]
 User=roboshop
 Environment=MONGO=true
-Environment=MONGO_URL="mongodb://mongodb-dev.devopsb71.xyz:27017/catalogue-dev"
+Environment=MONGO_URL="mongodb://mongodb-dev.devopsb71.xyz:27017/catalogue"
 ExecStart=/bin/node /app/server.js
 SyslogIdentifier=catalogue
 
